<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name" translatable="false">Coloria</string>

	<!-- Общее -->
	<string name="apply">Apply</string>
	<string name="ok" translatable="false">OK</string>

	<!-- Меню -->
	<string name="menu_item_to_settings">Settings</string>
	<string name="menu_item_change_to_1x1" translatable="false">1 x 1</string>
	<string name="menu_item_change_to_2x2" translatable="false">2 x 2</string>
	<string name="menu_item_change_to_16x16" translatable="false">16x 16</string>
	<string name="menu_item_rgb_test">RGB test</string>
	<string name="menu_item_full_screen">Full screen</string>
	<string name="menu_item_tap_sound">Tap sound</string>
	<string name="menu_item_animation">Animation</string>
	<string name="menu_item_about">About</string>

	<!-- О приложении -->
	<string name="about_rate_now">Rate this app</string>
	<string name="about_text">Test your screen or have fun</string>

	<!-- Параметры анимации -->
	<string name="animation_speed_slow">Slow</string>
	<string name="animation_speed_medium">Medium</string>
	<string name="animation_speed_fast">Fast</string>
	<string name="animation_speed_veryfast">Very fast</string>

	<string name="animation_type_low">Low</string>
	<string name="animation_type_half">Half</string>
	<string name="animation_type_big">Many</string>
	<string name="animation_type_full">Full (every squares)</string>

	<!-- Настройки -->
	<string name="animation_enabled">Enable animation</string>
	<string name="animation_speed">Animation speed:</string>
	<string name="animation_type">Animation type:</string>
	<string name="horizontal">Horizontal</string>
	<string name="perfomance_warning_info">High values can cause performance issues</string>
	<string name="setting_apply">@string/apply</string>
	<string name="tap_sound_enable">Tile tap sound</string>
	<string name="vertical">Vertical</string>

	<!-- Ошибки -->
	<string name="field_size_error">The field size is too large for your device</string>
</resources>
