<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<TextView
			android:id="@+id/perfomance_hint_label"
			style="@style/SubCaptionText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="4dp"
			android:text="@string/perfomance_warning_info"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<androidx.constraintlayout.widget.Guideline
			android:id="@+id/middle_guideline"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			app:layout_constraintGuide_percent="0.5" />

		<androidx.constraintlayout.widget.Guideline
			android:id="@+id/right_guideline"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			app:layout_constraintGuide_percent="0.6" />

		<TextView
			android:id="@+id/horizontal_label"
			style="@style/RegularText"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginTop="8dp"
			android:layout_marginEnd="8dp"
			android:labelFor="@id/horizontal_value"
			android:text="@string/horizontal"
			app:layout_constraintEnd_toStartOf="@+id/middle_guideline"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/perfomance_hint_label" />

		<TextView
			android:id="@+id/vertival_label"
			style="@style/RegularText"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginTop="8dp"
			android:layout_marginEnd="8dp"
			android:labelFor="@id/vertical_value"
			android:text="@string/vertical"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="@+id/middle_guideline"
			app:layout_constraintTop_toBottomOf="@+id/perfomance_hint_label" />

		<EditText
			android:id="@+id/horizontal_value"
			style="@style/RegularEditText"
			android:layout_width="0dp"
			android:layout_height="48dp"
			android:layout_marginStart="16dp"
			android:layout_marginTop="8dp"
			android:layout_marginEnd="16dp"
			android:ems="10"
			android:importantForAutofill="no"
			android:inputType="number"
			app:layout_constraintEnd_toStartOf="@+id/middle_guideline"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/horizontal_label"
			tools:text="4" />

		<EditText
			android:id="@+id/vertical_value"
			style="@style/RegularEditText"
			android:layout_width="0dp"
			android:layout_height="48dp"
			android:layout_marginStart="16dp"
			android:layout_marginTop="8dp"
			android:layout_marginEnd="16dp"
			android:ems="10"
			android:importantForAutofill="no"
			android:inputType="number"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="@+id/middle_guideline"
			app:layout_constraintTop_toBottomOf="@+id/vertival_label"
			tools:text="4" />

		<CheckBox
			android:id="@+id/sound_checkbox"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginTop="16dp"
			android:layout_marginEnd="8dp"
			android:text="@string/tap_sound_enable"
			app:layout_constraintEnd_toStartOf="@+id/right_guideline"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/horizontal_value" />

		<CheckBox
			android:id="@+id/animation_checkbox"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginTop="8dp"
			android:layout_marginEnd="8dp"
			android:text="@string/animation_enabled"
			app:layout_constraintEnd_toStartOf="@+id/right_guideline"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/sound_checkbox" />

		<TextView
			android:id="@+id/animation_type_label"
			style="@style/RegularText"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginTop="8dp"
			android:layout_marginEnd="8dp"
			android:labelFor="@id/animation_type_value"
			android:text="@string/animation_type"
			app:layout_constraintEnd_toStartOf="@+id/right_guideline"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/animation_checkbox" />

		<Spinner
			android:id="@+id/animation_type_value"
			android:layout_width="0dp"
			android:layout_height="48dp"
			android:layout_marginStart="8dp"
			android:layout_marginTop="8dp"
			android:layout_marginEnd="8dp"
			app:layout_constraintEnd_toStartOf="@+id/right_guideline"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/animation_type_label" />

		<TextView
			android:id="@+id/animation_speed_label"
			style="@style/RegularText"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginTop="16dp"
			android:layout_marginEnd="8dp"
			android:labelFor="@id/animation_speed_value"
			android:text="@string/animation_speed"
			app:layout_constraintEnd_toStartOf="@+id/right_guideline"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/animation_type_value" />

		<Spinner
			android:id="@+id/animation_speed_value"
			android:layout_width="0dp"
			android:layout_height="48dp"
			android:layout_marginStart="8dp"
			android:layout_marginTop="8dp"
			android:layout_marginEnd="8dp"
			app:layout_constraintEnd_toStartOf="@+id/right_guideline"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/animation_speed_label" />

		<Button
			android:id="@+id/apply_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="24dp"
			android:text="@string/setting_apply"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/animation_speed_value" />

	</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
